service interface and dumy adapter are passing tests ok deleted several stuff from ant that is not longer necessary. updated stax version to 2.0