@@ -1,20 +1,37 @@
 package org.opennaas.extensions.idb.serviceinterface;
 
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 
 public class EndpointReference {
 
 	public static final String ANON_URI = "http://docs.oasis-open.org/ws-rx/wsmc/200702/anonymous";
 	private final URI url;
+	private URL wsdl;
 
-	public EndpointReference(String wsdl) throws URISyntaxException {
-		this.url = new URI(wsdl);
+	public EndpointReference(String url) throws URISyntaxException {
+		this.url = new URI(url);
+		try {
+			URL a = new URL(url + "?wsdl");
+			this.wsdl = a;
+		} catch (MalformedURLException e) {
+
+			e.printStackTrace();
+		}
 
 	}
 
 	public EndpointReference(URI url) {
 		this.url = url;
+		try {
+			this.wsdl = new URL(url.toString() + "?wsdl");
+		} catch (MalformedURLException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+
 	}
 
 	@Override
@@ -26,4 +43,7 @@ public class EndpointReference {
 		return url;
 	}
 
+	public URL getWSDL() {
+		return wsdl;
+	}
 }
